@@ -12,7 +12,6 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -48,7 +47,7 @@ public class ActuatorEndpointProperties implements Serializable {
     /**
      * Define the security access level of the endpoint.
      */
-    private List<EndpointAccessLevel> access = Stream.of(EndpointAccessLevel.DENY).collect(Collectors.toList());
+    private List<EndpointAccessLevel> access = Stream.of(EndpointAccessLevel.DENY).toList();
 
     /**
      * Define the security access level for the endpoint.
