@@ -15,7 +15,6 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -63,7 +62,7 @@ public class ConsentCoreProperties implements Serializable {
      * are always ignored during consent rule calculations
      * and users will not be prmopted to consent to their release..
      */
-    private List<String> excludedAttributes = Stream.of("eduPersonTargetedID").collect(Collectors.toList());
+    private List<String> excludedAttributes = Stream.of("eduPersonTargetedID").toList();
 
     /**
      * Signing/encryption settings.
