@@ -11,7 +11,6 @@ import lombok.experimental.Accessors;
 import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -53,5 +52,5 @@ public class GoogleFirebaseCloudMessagingProperties implements Serializable {
     /**
      * Required scopes to properly communicate with the firebase cloud.
      */
-    private List<String> scopes = Stream.of("https://www.googleapis.com/auth/firebase.messaging").collect(Collectors.toList());
+    private List<String> scopes = Stream.of("https://www.googleapis.com/auth/firebase.messaging").toList();
 }
