@@ -12,7 +12,6 @@ import org.springframework.boot.context.properties.NestedConfigurationProperty;
 
 import java.io.Serial;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -48,7 +47,7 @@ public class OktaPrincipalAttributesProperties extends BaseOktaProperties {
      * when using client id and private-key.
      */
     @RequiredProperty
-    private List<String> scopes = Stream.of("okta.users.read", "okta.apps.read").collect(Collectors.toList());
+    private List<String> scopes = Stream.of("okta.users.read", "okta.apps.read").toList();
 
     /**
      * Okta client id used in combination with the private key.
